# EmbarcaTech-Residencia

./: .gitignore
3_traffic_light_interactive/: CMakeLists.txt
4_sensor_temp_dma_i2c/: CMakeLists.txt  sensor_temp_dma_i2c.c
4_sensor_temp_dma_i2c/helpers/display_oled/: display_oled.c  display_oled.h
4_sensor_temp_dma_i2c/helpers/setup/: setup.h
4_sensor_temp_dma_i2c/inc/: ssd1306_i2c.c
Comp_TempCycleDMA/: main.c  tarefa1_temp.c  tarefa2_display.c  testes_cores.c
Complem_Atividade_5/: Atividade_5.c  funcao_atividade_.c
NeoControlLab/: CMakeLists.txt  NeoControlLab.c  numeros_neopixel.c
Portable_Alarm_Simulator/: CMakeLists.txt  Portable_Alarm_Simulator.c
Portable_Alarm_Simulator/inc/: ssd1306_font.h
ati_unid_1_cap_4_temporiz/: CMakeLists.txt  ati_unid_1_cap_4_temporiz.c  setup.c  setup.h
atividade-app-multitarefa/: CMakeLists.txt  atividade-app-multitarefa.c
cdc_visual_device/: CMakeLists.txt  main.c
com_atividade_3_MQTT_2/: configura_geral.h  main.c  main_auxiliar.c
picco_ap_serv_temp/: CMakeLists.txt  picow_access_point.c
picco_ap_serv_temp/helpers/led/: led.c  (+1 more)
pico_freertos_fila_mutex/src/: CMakeLists.txt  main.c
pico_freertos_multi/src/: CMakeLists.txt  main.c
pico_freertos_rgb/src/: CMakeLists.txt  main.c
project_micro_servo_education/: CMakeLists.txt  project_micro_servo_education.c
responsive_CDC_Communication_Device_Class_device_with_visual_identification/: CMakeLists.txt  main.c
unidade_1_cap_3_atividade_/: CMakeLists.txt  neopixel.c  unidade_1_cap_3_atividade.c
unidade_1_capitulo_5/: CMakeLists.txt  unidade_1_capitulo_5.c
(+53 files in other folders)
